test/invalid/fc34950_Abstract_Override_sheep/SheepTypeA.plume
/**
 * SheepTypeA.plume
 *
 * Test: This class represent a Sheep on second generation
 *
 * @author namartins
 * @version $Id: SheepTypeA.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 
 class SheepTypeA extends Sheep is	
 	
 	method  getGen : () -> Integer is
		 gen  + 1